# Phisher-Man

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEMO_GUIDE.md  DEVELOPMENT.md  Dockerfile  EMAIL_IMPLEMENTATION.md  EMAIL_TESTING.md  MANUAL_EMAIL_TEST.md  README.md  SEND_CAMPAIGN_EXPLAINED.md  app.js  docker-compose.yml  package-lock.json  package.json  reset_demo.sh  server.js  test_email.sh
migrations/: 001_initial_schema.sql  002_add_tracked_links.sql
public/: custom.html  email-entering.html  email_entering.html  generated.html  index.html  landing.html  styles.css  template.html  tracking.html
src/: config.rs  error.rs  main.rs
src/db/: pool.rs
src/handlers/: analytics.rs  campaigns.rs  companies.rs  email.rs  employees.rs  mod.rs  templates.rs  tracking.rs
src/models/: analytics.rs  campaign.rs  company.rs  employee.rs  mod.rs  template.rs
src/services/: email_sender.rs  mod.rs
static/: analytics.html  api.js  campaigns.html  companies.html  custom.html  dashboard.html  email_entering.html  employees.html  generated.html  index.html  styles.css  template.html  templates-data.js
